fix clients section overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -653,6 +653,7 @@ input[type="radio"].visually-hidden {
 .clients-list-item {
   width: 100%;
   height: 100%;
+  min-height: 193px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -663,10 +664,9 @@ input[type="radio"].visually-hidden {
   margin: 6px 0 0 21px;
 }
 
-.clients-list:nth-child(5),
-.clients-list-item:first-child {
-
-  padding: 11px 15px 0 0;
+.clients-list-item:first-child .clients-item-link,
+.clients-list-item:nth-child(5) .clients-item-link {
+  margin: 11px 15px 0 0;
 }
 
 .clients-list-item:not(:first-child):not(:nth-child(5))::after {
